--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.application.name=quiz-manager
+management.endpoints.web.base-path=/metadata
 
+logging.file=logs/info.log
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+management.health.diskspace.enabled=false
