--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,15 @@ management.endpoints.web.base-path=/metadata
 
 logging.file=logs/info.log
 
-management.endpoints.web.exposure.include=health
+spring.datasource.username=quiz-manager
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/quiz-manager
+
+management.endpoints.web.exposure.include=health,liquibase
 management.endpoint.health.show-details=always
 management.health.diskspace.enabled=false
+
+spring.liquibase.change-log=classpath:database/schema.xml
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=false
