--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ management.endpoints.web.base-path=/metadata
 
 logging.file=logs/info.log
 
-spring.datasource.username=quiz-manager
-spring.datasource.password=password
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/quiz-manager
+spring.datasource.url=jdbc:mysql://${DB_HOSTNAME}/quiz-manager
 
 management.endpoints.web.exposure.include=health,liquibase
 management.endpoint.health.show-details=always
@@ -15,3 +15,5 @@ management.health.diskspace.enabled=false
 spring.liquibase.change-log=classpath:database/schema.xml
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
